<resources>
    <string name="app_name">Duke</string>
    <string name="trucker_tax_tools_app_name">TruckerTaxTools</string>
    <string name="default_notification_channel_id">duke-36a99</string>
    <string name="default_notification_channel_name">DUKE</string>
    <string name="duke_logo">DUKE LOGO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network">No Network</string>
    <string name="splash_image">Splash Image</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="OK">OK</string>
    <string name="delete">Delete</string>
    <string name="proceed">Proceed</string>
    <string name="try_again">Try Again</string>
    <string name="new_text">New?</string>
    <string name="register_text">Register</string>
    <string name="forgot_password_questionmark">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="referral_id">Referral Email ID (Optional)</string>
    <string name="promo_code">Promo Code(10 digits number)</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password should be minimum of 8 characters.</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_phone_number_format">Invalid phone number format.</string>
    <string name="invalid_phone">Phone number should contain minimum 6 digits, maximum of 14 digits and also country code.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="please_enter_valid_username">Please enter valid username</string>
    <string name="please_enter_valid_promo_code">Please enter valid referral ID</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_valid_code">Please enter valid code</string>
    <string name="email_format_error">Email should be in format youremail@domain.com</string>
    <string name="password_format_error">Password should be minimum of 8 characters.</string>
    <string name="phone_number_format_error">Phone number should contain minimum 6 digits, maximum of 14 digits and also country code</string>
    <string name="code_format_error">Verification code should be 6 digits</string>
    <string name="send_verification_code">send verification email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name (Optional)</string>
    <string name="phone">Phone Number</string>
    <string name="country_code">+1</string>
    <string name="duke">DUKE</string>
    <string name="enter_the_verification_code_sent_at">Enter the verification code sent to</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="did_not_get_resend">Did not get? Resend</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_go_back_to_login">Remember? Go back to login</string>
    <string name="new_password">New Password</string>
    <string name="set_password">Set password</string>
    <string name="profile_image">Profile Image</string>
    <string name="back_button">Back Button</string>
    <string name="title">Title</string>
    <string name="title_activity_documents">Documents</string>
    <string name="date_12_july">12 July</string>
    <string name="bill_name">Hotel Max</string>
    <string name="bill_type">Food</string>
    <string name="date_12_jul_18">12 Jul\'18</string>
    <string name="date_14_jul_18">14 Jul\'18</string>
    <string name="dollar">$</string>
    <string name="amount">27.90</string>
    <string name="in_process">In Process</string>
    <string name="processed">Processed</string>
    <string name="rejected">Rejected</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="preview_image">Preview Image</string>
    <string name="done_button">Done Button</string>
    <string name="upload_image">Upload Image</string>
    <string name="retake">Retake</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="upload_caps">UPLOAD</string>
    <string name="group_as_one_file">Group as one file</string>
    <string name="preview_caps">PREVIEW</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="few_permissions_needed">This app needs few permission to use this feature. You can grant them in app settings.</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="sorry_device_does_not_support">Sorry! Your device doesn\'t support camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close_icon">Close Icon</string>
    <string name="view">View</string>
    <string name="manage">Manage</string>
    <string name="upload">Upload</string>
    <string name="document">Document</string>
    <string name="financial">Financial</string>
    <string name="loads">Loads</string>
    <string name="create_load">Create Load</string>
    <string name="report">Report</string>
    <string name="reports">Reports</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="manage_loads">Manage  Loads</string>
    <string name="upload_document">Upload  Documents</string>
    <string name="scan_document">Scan  Documents</string>
    <string name="view_document">View  Document</string>
    <string name="view_report">View  Reports</string>
    <string name="select_photo">SelectPhoto</string>
    <string name="recycler_item">Recycler Item</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello, Joe</string>
    <string name="Joe">Joe</string>
    <string name="image_is_not_clear_please_reupload_another_document">Image is not clear. Please re upload another document</string>
    <string name="reupload">Reupload</string>
    <string name="settlements">Settlements</string>
    <string name="showing_summary_for">Showing summary for</string>
    <string name="upload_success">Upload Success</string>
    <string name="add_another_document">Add Another Document</string>
    <string name="go_back_home">Go Back Home</string>
    <string name="volia">Volia!</string>
    <string name="hello_your_document_was_uploaded_we_will_get_back_to_you_if_we_are_unable_to_process_the_document">Hello, your document was uploaded. We will get back to you if we are unable to process the document</string>
    <string name="oh_snap">Oh Snap!</string>
    <string name="oh_snap_capitals">OH SNAP!</string>
    <string name="hello_looks_like_something_went_wrong">Hello, looks like something went wrong.</string>
    <string name="something_went_wrong_please_try_login">Something went wrong, please try login.</string>
    <string name="please_try_again_later">Please try again later.</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="document_uploaded">Document Uploaded</string>
    <string name="exclamation">Exclamation</string>
    <string name="invalid_error">Invalid Error</string>
    <string name="error">Error</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="year_to_date">Year to Date</string>
    <string name="no_in_process_documents_to_list">No In process documents to list!</string>
    <string name="no_processed_documents_to_list">No Processed documents to list!</string>
    <string name="no_docs_present_in_this_load">No documents present in this load!</string>
    <string name="no_rejected_documents_to_list">No Rejected documents to list!</string>
    <string name="no_reports_to_list">No Reports to list!</string>
    <string name="no_data_available">No data available</string>
    <string name="document_image">Document Image</string>
    <string name="changepassword">Change Password</string>
    <string name="how_to_upload">How To Upload</string>
    <string name="old_password">Old Password</string>
    <string name="done">Done</string>
    <string name="referral_id_not_valid">Referral ID is not valid. Would you like to proceed without Referral ID?</string>
    <string name="Promocode_not_valid">Promocode is not valid</string>
    <string name="Invalid_PromoCode">Invalid promocode</string>
    <string name="add_a_document">Add a Document</string>
    <string name="please_enter_correct_password">Please enter correct password</string>
    <string name="incorrect_username_password">Incorrect username or password. Please try login.</string>
    <string name="user_already_exists">User already exists. Would you like to reset your password?</string>
    <string name="reset_password_user">Reset Password</string>
    <string name="password_did_not_confirm">Password did not conform with policy</string>
    <string name="already_exists_user">User already exists</string>
    <string name="email_not_registered">This email is not registered with us.Would you like to register?</string>
    <string name="user_combination_not_found">Username/client id combination not found.</string>
    <string name="correct_verification_code">Please enter the correct verification code.</string>
    <string name="invalid_username_password">Incorrect username or password.</string>
    <string name="new_old_password">New password should not match with old password.</string>
    <string name="verify_password">Your password has been successfully verified.</string>
    <string name="failed_to_fetch_user_details">Failed to fetch user attributes</string>
    <string name="phone_number_changed">Your phone number has changed successfully.</string>
    <string name="profile_upload_success">Updated profile picture successfully.</string>
    <string name="success">Success</string>
    <string name="new_password_is_set">New password is set.</string>
    <string name="password_changed_please_login">Your password has changed successfully, please login again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message">Message</string>
    <string name="warning">Warning</string>
    <string name="folder">&#160;folder</string>
    <string name="user_does_not_exists">User does not exist.</string>
    <string name="no_internet">Oops! It seems that you\'re not connected to the internet. Please check your netwrok connection.</string>
    <string name="delete_success">Your picture deleted successfully.</string>
    <string name="attempt_limit_exceeded">Attempt limit exceeded, please try after some time.</string>
    <string name="no_registered_email_phone">Can not reset password for the user as there is no registered/verified email or phone number</string>
    <string name="code_resent">Resent!</string>
    <string name="code_sent_to">Verification link resent to </string>
    <string name="user_not_confirmed">Your email is not verified. Please verify your email.</string>
    <string name="incorrect_verification">Please enter the correct verification code.</string>
    <string name="one_as_one">ONE as ONE</string>
    <string name="all_as_one">ALL as ONE</string>
    <string name="manual_configuration">Manual Configuration</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
</resources>