<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/dimen_20"
    tools:context=".ui.fragments.ForgotPassword">

    <com.dukeai.android.views.CommonHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_25"
        android:paddingBottom="@dimen/dimen_25"
        android:visibility="gone">

    </com.dukeai.android.views.CommonHeader>

    <ImageView
        android:id="@+id/logo"
        style="@style/LogoImage"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/duke_logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/reset_password_text"
        style="@style/ActiveTabButton"
        android:layout_below="@id/logo"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_39"
        android:paddingEnd="@dimen/dimen_25"
        android:text="@string/reset_password" />

    <View
        android:id="@+id/horizontal_line"
        style="@style/HorizontalLine"
        android:layout_width="@dimen/dimen_82"
        android:layout_below="@+id/reset_password_text"
        android:layout_alignStart="@+id/reset_password_text" />

    <RelativeLayout
        android:id="@+id/form_layout"
        style="@style/FormBackground"
        android:layout_below="@+id/reset_password_text"
        android:layout_marginEnd="@dimen/dimen_30"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/verification_code_text"
            style="@style/VerificationCodeText"
            android:layout_marginTop="@dimen/dimen_15"
            android:paddingStart="@dimen/dimen_30"
            android:text="@string/enter_the_verification_code_sent_at"
            android:visibility="gone" />

        <com.dukeai.android.views.CustomTextInputLayout
            android:id="@+id/email_layout"
            style="@style/FormFieldLayout"
            android:layout_marginTop="@dimen/dimen_20"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.dukeai.android.views.CustomEditInputField
                android:id="@+id/email"
                style="@style/FormField"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:tag="Email"
                app:hintTextAppearance="@color/colorIcon"
                app:parent_wrapper_id="@id/email_layout" />

        </com.dukeai.android.views.CustomTextInputLayout>

        <com.dukeai.android.views.CustomTextInputLayout
            android:id="@+id/code_layout"
            style="@style/FormFieldLayout"
            android:layout_below="@id/verification_code_text"
            android:layout_marginTop="@dimen/dimen_20"
            android:visibility="gone"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.dukeai.android.views.CustomEditInputField
                android:id="@+id/code"
                style="@style/FormField"
                android:hint="@string/verification_code"
                android:tag="Code"
                app:hintTextAppearance="@color/colorIcon"
                app:parent_wrapper_id="@id/code_layout" />

        </com.dukeai.android.views.CustomTextInputLayout>

        <com.dukeai.android.views.CustomTextInputLayout
            android:id="@+id/password_layout"
            style="@style/FormFieldLayout"
            android:layout_below="@id/code_layout"
            android:visibility="gone"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/password_toggle_icon"
            app:passwordToggleEnabled="true">

            <com.dukeai.android.views.CustomEditInputField
                android:id="@+id/password"
                style="@style/FormField"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/dimen_10"
                android:tag="Password"
                app:hintTextAppearance="@color/colorIcon"
                app:parent_wrapper_id="@id/password_layout" />

        </com.dukeai.android.views.CustomTextInputLayout>

        <Button
            android:id="@+id/verify"
            style="@style/FormButton"
            android:layout_below="@id/password_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/set_password"
            android:translationX="@dimen/dimen_35"
            android:visibility="gone" />

        <Button
            android:id="@+id/send_verification_code"
            style="@style/FormButton"
            android:layout_below="@id/email_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/send_verification_code"
            android:translationX="@dimen/dimen_35"
            android:visibility="visible" />

    </RelativeLayout>

    <Button
        android:id="@+id/resend"
        style="@style/resendButton"
        android:layout_below="@id/form_layout"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:text="@string/did_not_get_resend"
        android:visibility="gone" />

    <Button
        android:id="@+id/back_to_login"
        style="@style/BottomLinkText"
        android:layout_below="@id/resend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/remember_go_back_to_login" />

</RelativeLayout>