<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/dimen_20"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        style="@style/LogoImage"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/duke_logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/login_tab"
        style="@style/ActiveTabButton"
        android:layout_alignBottom="@+id/register_tab"
        android:layout_marginStart="@dimen/dimen_30"
        android:paddingEnd="@dimen/dimen_25"
        android:text="@string/login" />

    <View
        android:id="@+id/login_underline"
        style="@style/HorizontalLine"
        android:layout_below="@+id/login_tab"
        android:layout_alignStart="@+id/login_tab"
        android:layout_alignEnd="@+id/login_tab" />

    <Button
        android:id="@+id/new_register_tab"
        style="@style/InactiveTabButton"
        android:layout_below="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dimen_39"
        android:layout_marginEnd="@dimen/dimen_36"
        android:text="@string/new_text" />

    <Button
        android:id="@+id/register_tab"
        style="@style/InactiveTabButton"
        android:layout_below="@+id/new_register_tab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dimen_36"
        android:text="@string/register_text" />

    <RelativeLayout
        android:id="@+id/form_layout"
        style="@style/FormBackground"
        android:layout_below="@+id/register_tab"
        android:layout_marginEnd="@dimen/dimen_15"
        android:clipToPadding="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/FormFieldLayout"
            android:layout_marginTop="@dimen/dimen_15"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                style="@style/FormField"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:tag="Email"
                app:hintTextAppearance="@color/colorIcon"
                app:parent_wrapper_id="@id/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/FormFieldLayout"
            android:layout_below="@+id/email"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/password_toggle_icon"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                style="@style/FormField"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/dimen_10"
                android:tag="Password"
                app:hintTextAppearance="@color/colorIcon"
                app:parent_wrapper_id="@id/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_buton"
            style="@style/FormButton"
            android:layout_below="@id/password"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:paddingLeft="@dimen/dimen_75"
            android:paddingRight="95dp"
            android:text="@string/login"
            android:translationX="@dimen/dimen_35" />

        <include
            android:id="@+id/social_login_signin_frag"
            layout="@layout/layout_social_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_buton"
            tools:ignore="NotSibling" />

    </RelativeLayout>

    <Button
        android:id="@+id/forgot_password"
        style="@style/BottomLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/forgot_password_questionmark" />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/BottomLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_alignEnd="@id/form_layout"
        android:text="@string/privacy_policy"
        android:textColor="@color/blue_212537"
        android:paddingEnd="@dimen/dimen_20"/>

</RelativeLayout>